--- a/package.json
+++ b/package.json
@@ -5,9 +5,13 @@
   "main": "src/index.js",
   "type": "module",
   "dependencies": {
+    "@eslint/compat": "^1.1.1",
     "@eslint/js": "^9.11.1",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-jsx-a11y": "^6.10.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "eslint-plugin-react": "^7.37.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "typescript-eslint": "^8.7.0"
   },
   "devDependencies": {
