TF2-9 Suppress peer dependency warning
Because we're wrapping the react hooks plugin in a compatibility layer,
it doesn't matter that it's for an older ESLint version.

--- a/package.json
+++ b/package.json
@@ -17,5 +17,12 @@
   "devDependencies": {
     "eslint": "^9.11.1",
     "prettier": "^3.3.3"
+  },
+  "pnpm": {
+    "peerDependencyRules": {
+      "allowedVersions": {
+        "eslint": "^9"
+      }
+    }
   }
 }
