--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.37.0",
     "eslint-plugin-react-hooks": "^4.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.8",
     "typescript-eslint": "^8.7.0"
   },
   "devDependencies": {
