--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "private": "true",
   "main": "src/index.js",
   "type": "module",
+  "scripts": {
+    "test": "eslint ."
+  },
   "dependencies": {
     "@eslint/compat": "^1.1.1",
     "@eslint/js": "^9.11.1",
