--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "test": "eslint ."
+    "test": "tsc && eslint ."
   },
   "dependencies": {
     "@eslint/compat": "^1.1.1",
@@ -19,8 +19,11 @@
     "typescript-eslint": "^8.7.0"
   },
   "devDependencies": {
+    "@types/eslint-plugin-jsx-a11y": "^6.9.0",
+    "@types/eslint__js": "^8.42.3",
     "eslint": "^9.11.1",
-    "prettier": "^3.3.3"
+    "prettier": "^3.3.3",
+    "typescript": "^5.6.2"
   },
   "pnpm": {
     "peerDependencyRules": {
