--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "ts-code-standards",
+  "name": "@aligent/ts-code-standards",
   "version": "0.0.1",
-  "private": "true",
   "main": "src/index.js",
   "type": "module",
   "scripts": {
@@ -31,5 +30,6 @@
         "eslint": "^9"
       }
     }
-  }
+  },
+  "packageManager": "pnpm@9.11.0+sha512.0a203ffaed5a3f63242cd064c8fb5892366c103e328079318f78062f24ea8c9d50bc6a47aa3567cabefd824d170e78fa2745ed1f16b132e16436146b7688f19b"
 }
