--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,4 @@
 {
     "extends": "./tsconfigs/react.json",
-    "include": [
-        "**/*.tsx",
-        "**/*.ts",
-        "**/*.js",
-        "src/declarations.d.ts"
-    ]
+    "include": ["**/*.tsx", "**/*.ts", "**/*.js", "src/declarations.d.ts"]
 }
