--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -19,6 +19,7 @@ jobs:
       - name: Fetch target
         run: git fetch origin ${{ github.event.pull_request.base.ref }}
 
+      - uses: pnpm/action-setup@v4.0.0
       - uses: actions/setup-node@v4
         with:
           node-version-file: '.nvmrc'
@@ -43,6 +44,7 @@ jobs:
       - name: Fetch target
         run: git fetch origin ${{ github.event.pull_request.base.ref }}
 
+      - uses: pnpm/action-setup@v4.0.0
       - uses: actions/setup-node@v4
         with:
           node-version-file: '.nvmrc'
