--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,6 +5,8 @@ updates:
     schedule:
       interval: 'monthly'
     open-pull-requests-limit: 10
+    commit-message:
+      prefix: "TCS-3"
     groups:
       minor-and-patch:
         applies-to: version-updates
