--- a/package.json
+++ b/package.json
@@ -1,9 +1,17 @@
 {
   "name": "@aligent/ts-code-standards",
-  "main": "src/index.js",
   "type": "module",
+  "exports": {
+    ".": {
+      "require": "./dist/index.cjs",
+      "import": "./dist/index.mjs"
+    },
+    "./tsconfigs-base": "./tsconfigs/base.json",
+    "./tsconfigs-react": "./tsconfigs/react.json"
+  },
   "scripts": {
     "test": "tsc && eslint .",
+    "build": "npx rollup -c",
     "format": "prettier --ignore-path .prettierignore --check \"**/*.+(js|ts|json)\"",
     "format:check": "pnpm run format",
     "format:fix": "prettier --ignore-path .prettierignore --write \"**/*.+(js|ts|json)\""
@@ -13,17 +21,18 @@
     "@eslint/js": "^9.14.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "typescript-eslint": "^8.13.0"
   },
   "devDependencies": {
+    "@types/eslint-config-prettier": "^6.11.3",
     "@types/eslint-plugin-jsx-a11y": "^6.9.0",
     "@types/eslint__js": "^8.42.3",
     "eslint": "^9.14.0",
     "prettier": "^3.3.3",
+    "rollup": "^4.24.4",
     "typescript": "^5.6.3"
   },
   "packageManager": "pnpm@9.12.2+sha512.22721b3a11f81661ae1ec68ce1a7b879425a1ca5b991c975b074ac220b187ce56c708fe5db69f4c962c989452eee76c82877f4ee80f474cebd61ee13461b6228"
