--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -16,18 +16,17 @@ jobs:
         with:
           ref: ${{ github.event.release.target_commitish }}
 
-      - uses: pnpm/action-setup@v4.0.0
       - uses: actions/setup-node@v4
         with:
           node-version-file: '.nvmrc'
-          cache: 'pnpm'
+          cache: 'yarn'
           registry-url: https://registry.npmjs.org/
 
       - name: Install
-        run: pnpm install
+        run: yarn install
 
       - name: Build
-        run: pnpm build
+        run: yarn build
 
       - name: Preparing environment for release
         run: |
@@ -39,9 +38,9 @@ jobs:
         run: |
           git config --global user.name "Automated NPM Release"
           git config --global user.email "devops+npm-deploy@aligent.com.au"
-          pnpm version $VERSION --allow-same-version
+          yarn version $VERSION --allow-same-version
           echo "Publishing $PACKAGE @ $VERSION"
-          pnpm config set registry https://registry.npmjs.org/
-          pnpm publish .
+          yarn config set registry https://registry.npmjs.org/
+          yarn publish .
         env:
           NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
