--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -19,17 +19,16 @@ jobs:
       - name: Fetch target
         run: git fetch origin ${{ github.event.pull_request.base.ref }}
 
-      - uses: pnpm/action-setup@v4.0.0
       - uses: actions/setup-node@v4
         with:
           node-version-file: '.nvmrc'
-          cache: 'pnpm'
+          cache: 'yarn'
 
       - name: Install
-        run: pnpm install
+        run: yarn install
 
       - name: Run Tests
-        run: pnpm test
+        run: yarn test
 
   code-quality:
     name: 🕵️‍♀️ Code Quality
@@ -44,14 +43,13 @@ jobs:
       - name: Fetch target
         run: git fetch origin ${{ github.event.pull_request.base.ref }}
 
-      - uses: pnpm/action-setup@v4.0.0
       - uses: actions/setup-node@v4
         with:
           node-version-file: '.nvmrc'
-          cache: 'pnpm'
+          cache: 'yarn'
 
       - name: Install
-        run: pnpm install
+        run: yarn install
 
       - name: Code Quality Check
-        run: pnpm format:check
+        run: yarn format:check
