--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
     "@eslint/js": "^9.14.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "prettier-plugin-tailwindcss": "^0.6.8",
     "typescript-eslint": "^8.13.0"
   },
   "devDependencies": {
-    "@types/eslint-config-prettier": "^6.11.3",
     "@types/eslint-plugin-jsx-a11y": "^6.9.0",
     "@types/eslint__js": "^8.42.3",
     "eslint": "^9.14.0",
