--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@types/eslint__js": "^8.42.3",
     "eslint": "^9.17.0",
     "prettier": "^3.4.1",
+    "prettier-plugin-organize-imports": "^4.1.0",
     "rollup": "^4.29.1",
     "typescript": "^5.7.2"
   },
