bugfix: Publish .editorconfig file to npm

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   },
   "files": [
     "dist",
-    "tsconfigs"
+    "tsconfigs",
+    ".editorconfig"
   ],
   "scripts": {
     "test": "tsc && eslint .",
