Re-order codeowners file
This puts the devops line last so that it doesn't get overwritten by the
global line.

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,5 +1,5 @@
+# Frontend and Microservices teams own the code
+* @aligent/frontends @aligent/microservices
+
 # DevOps team owns the .github folder
 .github/ @aligent/devops
-
-# Frontend and Microservices teams own everything else
-* @aligent/frontends @aligent/microservices
